--- a/package.json
+++ b/package.json
@@ -62,10 +62,11 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
-    "@noble/hashes": "^1.2.0",
     "@noble/secp256k1": "^1.7.0",
+    "@planetarium/account": "0.54.0-dev.2023414523",
     "@planetarium/account-local": "^0.0.39",
     "@planetarium/account-raw": "^0.0.3",
+    "@planetarium/account-web3-secret-storage": "0.54.0-dev.2023414523",
     "@planetarium/check-free-space": "^0.0.2",
     "@planetarium/sign": "^0.0.12",
     "@radix-ui/react-radio-group": "^0.1.5",
@@ -103,7 +104,6 @@
     "electron-fetch": "^1.7.1",
     "electron-log": "^4.4.8",
     "electron-store": "8.0.2",
-    "ethers": "^6.0.8",
     "extract-zip": "^2.0.1",
     "fast-glob": "^3.2.11",
     "file-loader": "^6.0.0",
